# AgentStudio

./: .gitignore  .trigger  build.gradle.kts  build_apk.sh  final_build.sh  gradle.properties  gradlew  local.env  local.properties  run_build.sh  venai-keystore.jks
.github/workflows/: build-native.yml
AgentStudio/: .gitignore  LOCAL_AI_BUILD.md  build.gradle.kts  gradle.properties  gradlew  keystore.jks  keystore_new.jks  local.properties  settings.gradle.kts
AgentStudio/.github/workflows/: build-native.yml
AgentStudio/app/: build.gradle.kts  proguard-rules.pro
AgentStudio/app/src/main/: AndroidManifest.xml
AgentStudio/app/src/main/cpp/: CMakeLists.txt  build-native.sh  download-llama.sh  empty.cpp  llama-android.cpp
AgentStudio/app/src/main/java/com/agentstudio/: AgentStudioApp.kt  MainActivity.kt  MainContent.kt
AgentStudio/app/src/main/java/com/agentstudio/data/agent/: AgentExecutor.kt
AgentStudio/app/src/main/java/com/agentstudio/data/api/: OpenRouterApi.kt
AgentStudio/app/src/main/java/com/agentstudio/data/local/: LlamaJNI.kt  LocalLLMEngine.kt  LocalModelManager.kt
AgentStudio/app/src/main/java/com/agentstudio/data/model/: Models.kt
AgentStudio/app/src/main/java/com/agentstudio/data/repository/: PreferencesRepository.kt
AgentStudio/app/src/main/java/com/agentstudio/ui/components/: AIOrb.kt  AnimatedAILogo.kt  ChatBubble.kt  FormlessAIEntity.kt  ReplitThinkingAnimation.kt
AgentStudio/app/src/main/java/com/agentstudio/ui/screens/: ChatScreen.kt  ChatViewModel.kt  ChatViewModelFactory.kt  ModelSelectionScreen.kt
AgentStudio/app/src/main/java/com/agentstudio/ui/theme/: Theme.kt  Typography.kt
AgentStudio/app/src/main/res/values/: colors.xml  colors_launcher.xml  strings.xml  themes.xml
app/: build.gradle.kts  proguard-dictionary.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-android.cpp  venca_security.cpp
app/src/main/java/com/agentstudio/: AgentApplication.kt  MainActivity.kt
app/src/main/java/com/agentstudio/data/api/: GelbooruApi.kt  ImageSearchApi.kt  OpenRouterApi.kt  OpenRouterModels.kt  WebSearchApi.kt
app/src/main/java/com/agentstudio/data/local/: LlamaJNI.kt  LocalLLMEngine.kt
app/src/main/java/com/agentstudio/data/model/: AgentMessage.kt  ChatSession.kt  FileItem.kt
app/src/main/java/com/agentstudio/data/repository/: AgentRepository.kt  FileRepository.kt
app/src/main/java/com/agentstudio/domain/agent/: AgentExecutor.kt  ToolHandler.kt
app/src/main/java/com/agentstudio/domain/model/: AgentTool.kt  ToolResult.kt
app/src/main/java/com/agentstudio/security/: VenCA.kt  VenCANative.kt  VenCANetwork.kt  VenCAStorage.kt
app/src/main/java/com/agentstudio/ui/components/: AgentChatPanel.kt  CodeEditorPanel.kt  FileExplorerPanel.kt  MessageItem.kt  ReplitStyleAILogo.kt  ToolCallIndicator.kt
app/src/main/java/com/agentstudio/ui/screens/: AgentScreen.kt  FilesScreen.kt  MainScreen.kt  SettingsScreen.kt  VenCASecurityPanel.kt
app/src/main/java/com/agentstudio/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/agentstudio/ui/viewmodel/: AgentViewModel.kt  MainViewModel.kt
app/src/main/java/com/agentstudio/utils/: Constants.kt  FileUtils.kt
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
download/: AgentStudio-aligned.apk  AgentStudio-v1.2.0.apk  AgentStudio-v1.2.0.apk.idsig  AgentStudio-v1.2.1.apk  AgentStudio-v1.2.1.apk.idsig  AgentStudio-v2.0.0.apk  AgentStudio-v2.0.0.apk.idsig  AgentStudio-v2.1.0.apk  AgentStudio-v2.1.0.apk.idsig  AgentStudio-v2.2.0.apk  AgentStudio-v2.2.0.apk.idsig  VenAI-v3.0.0.apk  VenAI-v3.0.0.apk.idsig  VenAI-v3.1.0.apk  VenAI-v3.1.0.apk.idsig  VenAI-v3.3.0-signed.apk  VenAI-v3.3.0-signed.apk.idsig  VenAI-v3.3.1-local-ai-signed.apk.idsig  artifacts.json  venai-release.keystore  venai-v3.2.0.apk  venai-v3.2.0.apk.idsig  venai-v3.2.1.apk  venai-v3.2.1.apk.idsig  venai-v3.2.2.apk  venai-v3.2.2.apk.idsig  venai-v3.2.3.apk  venai-v3.2.3.apk.idsig
download/venai-apk/: app-release-unsigned.apk
